--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,105 @@
-<h1>
-  {{title}}
-</h1>
+<div class=" top left">
+  <button class="btn"
+      (click)="gameReady = gameReady == true ?  false: true">Back</button>
+  <button class="btn btn-outline-warning"
+      (click)="switchJeopardy(2)"
+      *ngIf="jeopardy == 1 && gameReady">Go to Double Jeopardy</button>
+  <button class="btn btn-outline-warning"
+      (click)="switchJeopardy(1)"
+      *ngIf="jeopardy == 2 && gameReady">Go to Single Jeopardy</button>
+  <button class="btn btn-outline-success"
+      (click)="save()">Save</button>
+  <button class="btn btn-outline-success"
+      (click)="recover()">Recover</button>
+</div>
+<section class="container"
+    *ngIf="gameReady">
+  <div class="row">
+    <div *ngIf="players.length == 0">Go back and add some players you dufus</div>
+    <div class="col col-xl-6 m-y-2"
+        *ngFor="let player of players">
+      <h1 class="title">{{player.name}} <strong>[{{player.score}}]</strong></h1>
+      <form class="m-y-2">
+        <input class="form-group"
+            type="text"
+            [value]="player.roundScore"
+            (input)="player.roundScore=$event.target.value" />
+        <button type="submit"
+            class="btn btn-primary m-y-1"
+            (click)="updatePlayer(player)">Add</button>
+      </form>
+      <div class="row m-y-1">
+        <div class="col-xs-2">
+          <button class="btn btn-success btn-block"
+              (click)="addPoints(player,vals[0])">{{vals[0]}}</button>
+        </div>
+        <div class="col-xs-2">
+          <button class="btn btn-success btn-block"
+              (click)="addPoints(player,vals[1])">{{vals[1]}}</button>
+        </div>
+        <div class="col-xs-2">
+          <button class="btn btn-success btn-block"
+              (click)="addPoints(player,vals[2])">{{vals[2]}}</button>
+        </div>
+        <div class="col-xs-2">
+          <button class="btn btn-success btn-block"
+              (click)="addPoints(player,vals[3])">{{vals[3]}}</button>
+        </div>
+        <div class="col-xs-2">
+          <button class="btn btn-success btn-block"
+              (click)="addPoints(player,vals[4])">{{vals[4]}}</button>
+        </div>
+      </div>
+      <div class="row m-y-2">
+        <div class="col-xs-2">
+          <button class="btn btn-danger btn-block"
+              (click)="subPoints(player,vals[0])">{{'-'+vals[0]}}</button>
+        </div>
+        <div class="col-xs-2">
+          <button class="btn btn-danger btn-block"
+              (click)="subPoints(player,vals[1])">{{'-'+vals[1]}}</button>
+        </div>
+        <div class="col-xs-2">
+          <button class="btn btn-danger btn-block"
+              (click)="subPoints(player,vals[2])">{{'-'+vals[2]}}</button>
+        </div>
+        <div class="col-xs-2">
+          <button class="btn btn-danger btn-block"
+              (click)="subPoints(player,vals[3])">{{'-'+vals[3]}}</button>
+        </div>
+        <div class="col-xs-2">
+          <button class="btn btn-danger btn-block"
+              (click)="subPoints(player,vals[4])">{{'-'+vals[4]}}</button>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+<section *ngIf="!gameReady"
+    class="container">
+  <h1>Add your players DAWG!</h1>
+  <h4>It's gonna be a no dog.</h4>
+  <form>
+    <input class="form-control col-xs-6"
+        type="text"
+        [value]="name"
+        (input)="name=$event.target.value" />
+
+    <button type="submit"
+        class="btn btn-primary m-y-1"
+        (click)="addPlayer(name)">Add</button>
+  </form>
+
+
+  <div class="col col-xs-6 offset-xs-6"
+      *ngIf="players.length">
+    <h2 class="text-right">Players</h2>
+    <ul class="text-right">
+      <li *ngFor="let player of players">
+        {{player.name}}</li>
+    </ul>
+  </div>
+  <button class="m-y-2 btn btn-primary btn-block"
+      (click)="gameReady = true">Done</button>
+</section>
